Implemented SubscribeToBundle stored procedure.
